# tictoc

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tictoc.py
