[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tictoc"
description = "Handy timer object."
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "Matthew A. Clapp", email = "itsayellow+dev@gmail.com" },
]
keywords = [
    "timing",
]
classifiers = [
    "Natural Language :: English",
]
version = "0.4.0"

[project.urls]
Homepage = "https://github.com/itsayellow/tictoc"

[tool.hatch.build.targets.wheel]
only-include = ["tictoc.py"]

[tool.hatch.build.targets.sdist]
include = [
    "/tictoc",
]

[tool.isort]
profile = "black"
known_first_party = ["helpers"]
