[metadata]
name = tictoc
version = 0.3.0
author = Matthew A. Clapp
author_email = Matthew Clapp <itsayellow+dev@gmail.com>
description = Handy timer object.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/itsayellow/tictoc
keywords = timing
classifiers =
    Development Status :: 3 Beta
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
py_modules = tictoc
